# recipes

./: README.md  dagger.json  flake.nix
.cooklang/: config.toml  units.toml
.dagger/: pyproject.toml
.template/: main.tex  preamble.tex  title.tex
Brød/: Bondebrød.cook  Brød.cook  Focaccia.cook  Pizzadej.cook  Rugbrød uden kerner.cook  Skinkeboller.cook  Surdejsbrød.cook  Theboller.cook
Dessert/: Amerikansk karameltærte.cook  Amerikanske-Cookies.cook  Jordbærtærte.cook  Mørdej.cook  Pæretærte med marcipan.cook  amerikansk-karamel-tærte.cook  brownies.cook  caramella.cook  chokoladekage.cook  chokolademousse.cook  chokolademuffins.cook  cidertærte.cook  claus-meyer-fastelavnsboller-2011.cook  fastelavnsboller-fra-vores-bageri.cook  financiers.cook  gammeldags-pebernødder.cook  gode-flade-pandekager.cook  hofdessert-med-jordbær.cook  jordbærcreme.cook  kanelsnegle.cook  kiusekage.cook  lyse-karamellkager.cook  madam-mangors-håkanuskager-med-mandler-og-chokolade.cook  madam-maugors-håkonskager-med-mandler-og-chokolade.cook  marcipantærte.cook  marmorkage.cook  marshmallow-chocolate-cake.cook  mueslibar.cook  muffins---summerbird.cook  muffins.cook  mørdej.cook  orange-santounbo-heiberg.cook  pandekager.cook  passionsfrugt-tærte.cook  pære-hindbær-crumble-med-mandler.cook  pæretærte-med-marcipan.cook  risalamande-med-kirsebærsauce.cook  små-pebertær.cook  tarte-fine-med-æbler.cook  toskakage.cook  (+4 more)
Dinner/: Beef Tenderloin with Pasta and Red Wine Sauce.cook  Dads Tomato and Sausage Sauce.cook  (+3 more)
dagger/: pyproject.toml
dagger/src/recipes/: __init__.py  main.py
(+212 files in other folders)
