[project]
name = "recipes"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-io",
]

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.27.0",
    "ruff>=0.9.6",
]
